--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ I love watching football and playing video games
 <hr size="2" color="yellow">
 
 <a href="pages/about/about.html">About Me</a>
-<a href="pages/contact/">Contact Me</a>
+<a href="pages/contact/contact.html">Contact Me</a>
 <a href="pages/hobby/hobby.html">My hobbies</a>
 
 <a href="pages/media/media.html"> media</a>
