--- a/pages/about/about.html
+++ b/pages/about/about.html
@@ -13,7 +13,7 @@
     From the excitments of the chuff sounds from a whirling helicopter rotor that made me feel i was destined to be a pilot. <br>
     Anyway i'm en route to being a very well decorated programmer,and i feel optimistic about this one. <br><br>
 
-<a href="/index.html"> Home</a>
+<a href="../../index.html"> Home</a>
 </p>
 
 
