--- a/pages/hobby/hobby.html
+++ b/pages/hobby/hobby.html
@@ -11,7 +11,7 @@
 <li><a href="https://www.newsnow.com/ng/Sport/Football/Premier+League/Chelsea">Playing Football</a></li>
 <li><a href="https://www.ea.com/games/fifa">Playing Video Games</a></li>
 </ol>
-<a href="/index.html">Home</a>
+<a href="../../index.html">Home</a>
 
 <body>
     
