--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -11,25 +11,25 @@
 <hr size="2">
 
 <form action="mailto:teezzy1@gmail.com" method="get">
-<label for="name">Name</label>
-<input type="text"> <br>
+<label for="name">Name</label> <br><br>
+<input type="text"> <br> <br>
 <label for="email">Email</label> 
 <input type="text"> <br>
  <label for="phonenumber">phonenumber</label>
  <input type="text"> <br>
  <label for="gender">Gender:</label>
   <br>
- <label for="Male">Male</label>
- <input type="radio"> <br>
- <label for="Female">Female</label>
- <input type="radio"> <br>
- <label for="not saying">Not Saying</label>
- <input type="radio"> <br>
+ 
+ Male:<input type="radio" name="gender"><br>
+ 
+ Female:<input type="radio" name="gender"> <br>
+ 
+ Not saying:<input type="radio" name="gender"> <br>
  <label for="signing up">Do you want to sign up for the email list?</label> <br>
  <label for="yes">Yes</label>
- <input type="radio"> <br>
+ <input type="radio" name="yes"> <br>
 <label for="No">No</label>
- <input type="radio"> <br>
+ <input type="radio" name="yes"> <br>
  <label for="favcar">Favorite car</label> <br>
  <select name="Car" id="Car">
     <option value="Benz">Benz</option>
